--- a/src/sass/elements/_headlines.scss
+++ b/src/sass/elements/_headlines.scss
@@ -10,7 +10,7 @@ h3,
 h4,
 h5,
 h6 {
-	color: var(--color-primary-basis);
+	color: var(--color-content-headlines);
 	font-weight: bold;
 	
 	em {
@@ -21,6 +21,13 @@ h6 {
 	}
 }
 
+main {
+    h1, h2, h3, h4, h5 {
+	a {
+	    color: var(--color-content-headlines);
+	}
+    }
+}
 
 
 h1, h2 {
