--- a/src/sass/elements/_quotes.scss
+++ b/src/sass/elements/_quotes.scss
@@ -108,7 +108,7 @@ blockquote {
 
 
 cite {
-    color: var(--color-primary-dunkler); 
+    color: var(--color-Text); 
     font-weight: normal;
     font-style: normal;
     
