--- a/src/sass/mixins/_mixins.scss
+++ b/src/sass/mixins/_mixins.scss
@@ -172,7 +172,22 @@ Mixins File for Wordpress Theme FAU
 
 }
 
+@mixin buttonstyle($radius: 3px) {
+    @include inline-block;
+    @include border-radius($radius);
+    @include px2rem($font-size-textbuttons);
+	
+    color: var(--color-primary-basis-kontrast);
+    background: var(--color-primary-basis);
+    padding: 6px 10px;
+    text-decoration: none;
 
+	
+    &:hover, &:focus {
+    	background: var(--color-primary-dunkler);
+	text-decoration: none;
+    }
+}
 
 // Set Font Style
 
